# ubco-print-farm

./: .env  .gitignore  README.md  _coverpage.md  _sidebar.md  cargo.toml  development.md  hardware.md  index.html  package.json  raspberrypis.md  readme.md  turbo.json
.github/: docs.yml
.github/workflows/: docs.yml
apps/backend/: index.ts  package.json  tsconfig.json
apps/backend/utils/: jwtParser.ts  minio.ts  mjpegHandler.ts  surreal.ts
apps/backend/utils/octoprint/: printerHandler.ts  testOctoConnection.ts
apps/database/: docker-compose.yml  package.json  testing.srqlnb
apps/docs/: README.md  development.md  hardware.md  index.html  overview.md  package.json
apps/frontend/: package.json  tailwind.config.js  tsconfig.json
apps/frontend/components/: Footer.tsx  Loader.tsx  PageContainer.tsx  PrinterInfoCard.tsx
apps/frontend/components/guards/: AdminGuard.tsx  RouteGuard.tsx
apps/frontend/components/printfarm/: AdminDashButton.tsx  PrintQueue.tsx  StlRenderer.tsx  UploadPrint.tsx
apps/frontend/helpers/: loadingMessages.ts
apps/frontend/helpers/authentication/: authenticator.ts
apps/frontend/pages/: _app.tsx  index.tsx  overview.tsx  test.tsx
apps/frontend/pages/api/: signup.ts
apps/frontend/pages/authentication/: login.tsx  signup.tsx
apps/frontend/stores/: Store.ts
apps/frontend/styles/: globals.css
apps/frontend/surreal/: surreal.ts
apps/storage/: docker-compose.yml  package.json
apps/user-site/: package.json
apps/user-site/pages/: index.tsx
apps/user-site/src-tauri/: Cargo.toml  tauri.conf.json
(+12 files in other folders)
